[project]
name = "tweet-spotify-favs"
version = "0.1.0"
description = "Tweet your Spotify favorites automatically"
requires-python = ">=3.9"
dependencies = [
    "tweepy>=4.14.0",
    "spotipy>=2.23.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"